--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="habit_tracker">Habit Tracker</string>
     <string name="History">History</string>
     <string name="Plus">+</string>
+    <string name="edit_habits">Edit Habits</string>
 </resources>
