--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="History">History</string>
     <string name="Plus">+</string>
     <string name="edit_habits">Edit Habits</string>
+    <string name="count_toggle">Count Toggle</string>
 </resources>
